[workspace]
members = ["xorion-sdk"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Xorion Web3 OS Team"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/xorion-web3-os"
description = "Complete Web3 SDK for Ethereum and Solana"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"

# Ethereum dependencies
ethers = "2.0"
web3 = "0.19"
secp256k1 = { version = "0.27", features = ["recovery"] }
bip39 = "2.0"
keccak-hash = "0.10"

# Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
bs58 = "0.5"

# Crypto
sha2 = "0.10"
sha3 = "0.10"
digest = "0.10"
