[package]
name = "xorion-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete Web3 SDK for Ethereum and Solana blockchains"
keywords = ["web3", "ethereum", "solana", "blockchain", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
hex.workspace = true
bytes.workspace = true
log.workspace = true
env_logger.workspace = true
async-trait.workspace = true

# Ethereum dependencies
ethers.workspace = true
web3.workspace = true
secp256k1.workspace = true
bip39.workspace = true
keccak-hash.workspace = true

# Solana dependencies
solana-sdk.workspace = true
solana-client.workspace = true
solana-transaction-status.workspace = true
bs58.workspace = true

# Crypto
sha2.workspace = true
sha3.workspace = true
digest.workspace = true

# Additional utilities
rand = "0.8"
chrono = "0.4"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[example]]
name = "wallet_creation"
path = "examples/wallet_creation.rs"

[[example]]
name = "rpc_integration"
path = "examples/rpc_integration.rs"

[[example]]
name = "smart_contracts"
path = "examples/smart_contracts.rs"

[[example]]
name = "token_transfers"
path = "examples/token_transfers.rs"

[[example]]
name = "defi_interactions"
path = "examples/defi_interactions.rs"
