[package]
name = "xorion-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bip39 = "2.0"
hdwallet = "0.3"
web3 = "0.21"
ethers = { version = "2.0", features = ["full"] }
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
sha3 = "0.10"
hex = "0.4"
rlp = "0.5"
ethereum-types = "0.14"
solana-sdk = "1.17"
solana-program = "1.17"
solana-client = "1.17"
bs58 = "0.5"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
